fix contraste 2

--- a/assets/style.css
+++ b/assets/style.css
@@ -89,15 +89,15 @@ header .name {
 	width: 80%;
 	font-size: 14px;
 }
-
 /* changement de couleur des felèches du carrousel en rouge */
-
-.carousel-control-prev-icon,
+/* .carousel-control-prev-icon,
 .carousel-control-next-icon {
-	filter: invert(27%) sepia(97%) saturate(7484%) hue-rotate(357deg) brightness(104%) contrast(116%);
+	filter: brightness(1.2) contrast(1.1)
+} */
+
+#carouselExampleIndicators button {
+    filter: brightness(1.2) contrast(1.1)
 }
-
-
 .title{
 	text-align: center;
 	padding-block: 2em;
